tests/architecture/fixtures/invalid/infrastructure-boundaries/browser-storage-global.ts
export const value = globalThis["localStorage"].getItem("key");
